--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled  true
     }
     buildTypes {
         release {
@@ -34,10 +35,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     implementation 'com.android.support:cardview-v7:26.0.1'
-    compile 'com.google.firebase:firebase-core:11.2.0'
-    compile 'com.google.firebase:firebase-database:11.2.0'
-    compile "com.google.firebase:firebase-auth:11.2.0"
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile "com.google.firebase:firebase-auth:9.0.2"
     implementation 'com.android.support:gridlayout-v7:26.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
