--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,10 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.0.1'
     compile 'com.google.firebase:firebase-core:9.0.2'
     compile 'com.google.firebase:firebase-database:9.0.2'
-    compile "com.google.firebase:firebase-auth:9.0.2"
+    compile 'com.google.firebase:firebase-auth:9.0.2'
     implementation 'com.android.support:gridlayout-v7:26.0.1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'//this for the retrofit
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'// this for the JSON converter
 }
 
 apply plugin: 'com.google.gms.google-services'
