--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".feature.game.GameActivity">
-
-        </activity>
+        <activity android:name=".feature.game.GameActivity"></activity>
         <activity
             android:name=".feature.main.MainActivity"
             android:label="@string/title_activity_home"
