--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,20 +25,20 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.0.1'
-    implementation 'com.android.support:support-vector-drawable:26.0.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
-    implementation 'com.android.support:cardview-v7:26.0.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:26.0.1'
+    compile 'com.android.support:support-vector-drawable:26.0.1'
+    compile 'junit:junit:4.12'
+    compile 'com.android.support.test:runner:1.0.0'
+    compile 'com.android.support.test.espresso:espresso-core:3.0.0'
+    compile 'com.android.support:cardview-v7:26.0.1'
     compile 'com.google.firebase:firebase-core:9.0.2'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
-    implementation 'com.android.support:gridlayout-v7:26.0.1'
+    compile 'com.android.support:gridlayout-v7:26.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'//this for the retrofit
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'// this for the JSON converter
 }
