--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
         <activity android:name=".feature.game.GameActivity" />
         <activity
             android:name=".feature.main.MainActivity"
@@ -25,7 +42,7 @@
         </activity>
         <activity android:name=".feature.resetpassword.ResetPasswordActivity" />
         <activity android:name=".feature.signup.SignupActivity" />
-        <activity android:name=".feature.question.QuestionsActivity" />
+        <activity android:name=".feature.question.NewsActivity" />
         <activity android:name=".feature.question.QuestionActivity" />
         <activity android:name=".feature.game.ResultActivity"></activity>
     </application>
