--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+    maven { url 'https://maven.google.com' }
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -42,6 +46,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'//this for the retrofit
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'// this for the JSON converter
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
